manifests/virtual-service-grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtual-service
  namespace: prometheus-graphana
spec:
  hosts:  # Or your specific domain
  - grafana.shyammylai.me
  gateways:
  # - istio-system/grafana-gateway
  - prometheus-graphana/grafana-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: graphana-prometheus-grafana.prometheus-graphana.svc.cluster.local
        port:
          number: 80
  tls:
  - match:
    - port: 443
      sniHosts:
        - grafana.shyammylai.me
    route:
    - destination:
        host: graphana-prometheus-grafana.prometheus-graphana.svc.cluster.local
        port:
          number: 80
