manifests/network_policy_db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kafka-consumer
  namespace: namespace3
spec:
  podSelector:
    matchLabels:
      networkLabel: db
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: deployment-consumer # label for kafka-consumer pod
        - namespaceSelector:
            matchLabels:
              namespace: namespace3
    - from: 
        - podSelector:
            matchLabels:
              networkLabel: db #label for pgpool & postgres pods
              # reason for putting this is because i have attached the same label for pgpool & postgres pods without this these pods aren't able to communicate with each other
        - namespaceSelector:
            matchLabels:
              namespace: namespace3
      ports:
        - protocol: TCP
          port: 5432
